--- a/analyse-student/src/main/resources/templates/student/add_student.html
+++ b/analyse-student/src/main/resources/templates/student/add_student.html
@@ -10,7 +10,7 @@
                     <div class="form-group">
                         <label for="student_name" class="col-sm-3 control-label">学生姓名：</label>
                         <div class="col-sm-8">
-                            <input id="student_name" placeholder="请输入学生姓名 例：小明" name="Name" class="form-control" type="text" required>
+                            <input id="student_name" placeholder="请输入学生姓名 例：小明" name="studentName" class="form-control" type="text" required>
                             <span class="m-t3 help-block m-b-none"><i class="fa fa-info-circle"></i> 学生姓名总长度2位以上</span>
                         </div>
                     </div>
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <label for="class_id" class="col-sm-3 control-label">班级：</label>
                         <div class="col-sm-8">
-                            <select id="class_id" name="classId" class="form-control">
+                            <select id="class_id" name="classId" class="form-control" required>
                                     <option>选择班级</option>
                                     @for(grade in grades){
                                         <optgroup label="${grade.gradeName}">
@@ -41,7 +41,7 @@
                     <div class="form-group">
                         <label for="student_card_num" class="col-sm-3 control-label">身份证号码：</label>
                         <div class="col-sm-8">
-                            <input id="student_card_num" name="studentCardNum" placeholder="身份证号码" class="form-control" type="text" required>
+                            <input id="student_card_num" name="studentCardNum" placeholder="身份证号码" class="form-control" type="text">
                         </div>
                     </div>
 
@@ -115,7 +115,6 @@
                     var optStr = "<option>选择班级</option>";
                     $.each(data, function(i, v) {
                         var optTemp = "";
-                        console.log(v);
                         if(v['classes']!=null){
                             $.each(v['classes'], function (i1,v1) {
                                 optTemp+="<option value='"+v1["classId"]+"'>"+v1["className"]+"</option>"
@@ -124,7 +123,6 @@
 
                         optStr+="<optgroup label='"+v["gradeName"]+"'>"+optTemp+"</optgroup>"
                     });
-                    console.log(optStr);
                     $("#class_id").html(optStr);
                 }
             });
@@ -165,12 +163,12 @@
             submitHandler: function() {
                 $.ajax({
                     type : "POST",
-                    url:"${ctxPath}/user/add_user",//+tab,
-                    data : $('#viladate_form').serialize(),// 你的formid
+                    url:"${ctxPath}/student/add_student",//+tab,
+                    data : $('#viladate_form').serialize(),
                     success: function(data){
                         if(data['status']==1){
                             toastr.success(data['body']);
-                            setTimeout('window.location.href="/user/index.html"',900);
+                            setTimeout('window.location.href="/student/index.html"',900);
                         }else{
                             toastr.success(data['body']);
                         }
@@ -179,30 +177,31 @@
             }
         }),$('input[required]').parent().prev().append(
             '<span style="color:red">*</span>'
+        ),$('select[required]').parent().prev().append(
+            '<span style="color:red">*</span>'
         );
 
-        //用户名验证
-        $.validator.addMethod("checkUserName",function(value,element,params){
-            var checkName = /^\w{2,10}$/g;
-            return this.optional(element)||(checkName.test(value));
-        },"只允许英文字母、数字或者下画线！");
-
+        //身份证号码验证 验证成功改变性别
         jQuery.validator.addMethod("isIdCardNo", function(value, element) {
 
-            if(idCardNoUtil.checkIdCardNo(value)){
-                var info = idCardNoUtil.getIdCardInfo(value);
-                if(info.gender == "男"){
-                    $("input[name='studentSex']:eq(1)").parent().removeClass("checked");
-                    $("input[name='studentSex']:eq(1)").attr("disabled",true);
-                    $("input[name='studentSex']:eq(0)").attr("checked",true);
-                    $("input[name='studentSex']:eq(0)").parent().addClass("checked");
-                }else {
-                    $("input[name='studentSex']:eq(0)").parent().removeClass("checked");
-                    $("input[name='studentSex']:eq(0)").attr("disabled",true);
-                    $("input[name='studentSex']:eq(1)").attr("checked",true);
-                    $("input[name='studentSex']:eq(1)").parent().addClass("checked");
+            if(value==""){
+                return true;
+            }else{
+                if(idCardNoUtil.checkIdCardNo(value)){
+                    var info = idCardNoUtil.getIdCardInfo(value);
+                    if(info.gender == "男"){
+                        $("input[name='studentSex']:eq(1)").parent().removeClass("checked");
+                        $("input[name='studentSex']:eq(1)").attr("disabled",true);
+                        $("input[name='studentSex']:eq(0)").attr("checked",true);
+                        $("input[name='studentSex']:eq(0)").parent().addClass("checked");
+                    }else {
+                        $("input[name='studentSex']:eq(0)").parent().removeClass("checked");
+                        $("input[name='studentSex']:eq(0)").attr("disabled",true);
+                        $("input[name='studentSex']:eq(1)").attr("checked",true);
+                        $("input[name='studentSex']:eq(1)").parent().addClass("checked");
+                    }
+                    return this.optional(element) || idCardNoUtil.checkIdCardNo(value);
                 }
-                return this.optional(element) || idCardNoUtil.checkIdCardNo(value);
             }
 
         },"请输入正确的身份证号");
