--- a/analyse-student/src/main/resources/templates/student/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/student/ajax_index.html
@@ -1,64 +1,67 @@
-<table class="table table-striped table-bordered table-hover">
-    <thead>
-    <tr>
-        <th><input type="checkbox" id="check_all"></th>
-        <th>用户名</th>
-        <th>姓名</th>
-        <th>角色</th>
-        <th>联系电话</th>
-        <th>性别</th>
-        <th>状态</th>
-        <th>添加人</th>
-        <th>添加时间</th>
-        <th>编辑人</th>
-        <th>编辑时间</th>
-        <th>操作</th>
+<table class="table tree table-striped table-bordered table-hover">
+    @for(grade in grades){
+    <tr class="treegrid-${grade.gradeId}">
+        <td>${grade.gradeName}</td>
+        <td>学号</td>
+        <td>年龄</td>
+        <td>联系电话</td>
+        <td>性别</td>
+        <td>添加人</td>
+        <td>添加时间</td>
+        <td>编辑人</td>
+        <td>编辑时间</td>
+        <td>操作</td>
     </tr>
-    </thead>
-    <tbody>
-    @for(user in page_info.list){
-    <tr>
-        <td><input type="checkbox" class="i-checks" name="input[]" value="${user.userId}"></td>
-        <td>${user.userName}</td>
-        <td>${user.realName}</td>
-        <td></td>
-        <td>${user.userTel}</td>
-        <td>
-            @if(user.sex==1){
-            男
-            @}else{
-            女
+        @if(!isEmpty(grade.classes)){
+            @for(clazz in grade.classes){
+            <tr class="treegrid-${grade.gradeId}${clazz.classId} treegrid-parent-${grade.gradeId}">
+                <td>${clazz.classYear,"yyyy"}学年 ${grade.gradeName} (${clazz.className})</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+                @if(!isEmpty(clazz.students)){
+                    @for(student in clazz.students){
+                    <tr class="treegrid-${grade.gradeId}${clazz.classId}${student.studentId} treegrid-parent-${grade.gradeId}${clazz.gradeId}">
+                        <td>${student.studentName}</td>
+                        <td>${student.studentCode}</td>
+                        <td></td>
+                        <td></td>
+                        <td>
+                            @if(student.studentSex==1){
+                            男
+                            @}else{
+                            女
+                            @}
+                        </td>
+                        <td>${student.createName}</td>
+                        <td>${student.createTime,"yyyy-MM-dd HH:mm"}</td>
+                        <td>${student.updateName}</td>
+                        <td>${student.updateTime,"yyyy-MM-dd HH:mm"}</td>
+                        <td></td>
+                    </tr>
+                    @}
+                @}
             @}
-        </td>
-        <td>
-            @if(user.status==1){
-            锁定
-            @}else{
-            正常
-            @}
-        </td>
-        <td>${user.createName}</td>
-        <td>${user.createTime,"yyyy-MM-dd HH:mm"}</td>
-        <td>${user.updateName}</td>
-        <td>${user.updateTime,"yyyy-MM-dd HH:mm"}</td>
-        <td >
-            @if(user.userName != 'admin'){
-            @if(so.hasPermission('USER_EDIT')){
-            <a href="${ctxPath}/user/edit_user.html?userId=${user.userId}"><i class="glyphicon glyphicon-pencil"></i></a>
-            @}
-            &nbsp;&nbsp;
-            @if(so.hasPermission('USER_DEL')){
-            <a href="${ctxPath}/user/del_user.html?userId=${user.userId}"><i class="glyphicon glyphicon-trash"></i></a>
-            @}
-            @}
-        </td>
-    </tr>
+        @}
     @}
-    </tbody>
 </table>
-<div class="col-sm-8 pull-right text-right">${pages}</div>
 
 <script>
+
+    $(document).ready(function() {
+        $('.tree').treegrid({
+            expanderExpandedClass: 'glyphicon glyphicon-minus',
+            expanderCollapsedClass: 'glyphicon glyphicon-plus'
+        });
+    });
+
     $(".pagination  a").click(function(){
         var page = $(this).data('p');
         ajax_get_table('search-form2',page);
