学生列表默认关闭状态

--- a/analyse-student/src/main/resources/templates/student/ajax_index.html
+++ b/analyse-student/src/main/resources/templates/student/ajax_index.html
@@ -58,7 +58,8 @@
     $(document).ready(function() {
         $('.tree').treegrid({
             expanderExpandedClass: 'glyphicon glyphicon-minus',
-            expanderCollapsedClass: 'glyphicon glyphicon-plus'
+            expanderCollapsedClass: 'glyphicon glyphicon-plus',
+            initialState:"collapsed"
         });
     });
 
